            Allow Magnetometer speed to be specified for Puck.js
            Fix out of memory when appending a string to itself
            Allow members of the same name as function arguments to be added to a function (fix #913)
            Fix STM32F4 RTC stopping if reset during first 1 sec of boot, also fix Espruino WiFi board clock startup

     1v86 : Compile Telnet server into linux by default, Add '--telnet' command-line option to enable it
            Fix lock 'leak' in Telnet when Telnet is turned off
            Add Telnet serial device to allow redirection
            Create errors for unterminated expressions (fix #814)
            Remove Espruino's built-in strcpy/etc
            Remove Espruino's built-in maths
            Add basic Taylor series sin and atan for when we're trying to save memory  
            Refactoring to use global var for lexer - save some memory and increase parse speed
            Add .removeListener (fix #30)
            Added better micro:bit `show()` that works well with Graphics
            Add `require("Flash").getFree()` as multiplatform way to find free flash pages (fix #815)
            Add the ability to set clock frequencies on STM32F4 chips (like Pico) with E.setClock (fix #52)
            `jsvEvaluate` now uses memory area for execution of JS strings (fix #817)
            Add `E.setBootCode` to allow JS scripts to be run without being in RAM (fix #740)
            'Expecting a number or something iterable, got X' changed to exception rather than warning (gives stack trace)
            Drop '.init' and '.fini' symbols, allowing GCC 5.x compilation on STM32
            Ensure that pinMode/digitalWrite is re-constituted properly by dump() and save() (fix #833) 
            ESP8266: add stack dump on fatal exception, ./targets/esp8266/printstack can extract a backtrace
            ESP8266: move JswSymPtr and JswSymList to flash to free up gobs of RAM, bump jsvars to 1600